--- a/index.css
+++ b/index.css
@@ -70,7 +70,7 @@
 }
 
 .nav-container2{
-    margin-left: 280px;
+    margin-left: 320px;
 }
 
 .nav-bar a{
@@ -93,7 +93,7 @@
     position: relative;
     min-width: 150px;
     width: 10%;
-   
+    margin-left: 50px;
 }
 
 .search-icon{
@@ -145,7 +145,6 @@
     display: flex;
     align-items: center;
     margin-right: 60px;
-    box-sizing: content-box;
 }
 
 .heart{
@@ -188,4 +187,15 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
+}
+.sale-updates{
+    font-size: 18px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.sale-link{
+    text-decoration: underline;
+    font-size: 12px;
+    font-weight: 600;
+    padding-top: 5px;
+    font-family: Arial, Helvetica, sans-serif;
 }
